[package]
name = "vectorized-kg"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
approx = "0.5"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand_chacha = "0.3"
rand_core = "0.6"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"